deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: framework-educativo-front
  labels:
    app: framework-educativo-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: framework-educativo-front
  template:
    metadata:
      labels:
        app: framework-educativo-front
    spec:
      containers:
        - name: framework-educativo-front
          image: tronxi/framework-educativo-front:${FRONT_TAG}
          resources:
            limits:
              cpu: "0.4"
              memory: "300Mi"
            requests:
              cpu: "0.1"
              memory: "100Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: framework-educativo-front
spec:
  type: NodePort
  selector:
    app: framework-educativo-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: framework-educativo-front-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: framework-educativo-ip-global
    networking.gke.io/managed-certificates: framework-educativo-certificate
spec:
  backend:
    serviceName: front-service
    servicePort: 80
